<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.capitalsocial.capitalsocial.view.LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/login_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:padding="55dp"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/logo_capital_social"/>
                </LinearLayout>

                <include layout="@layout/login_facebook"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/ingresar_usuario_contrasenia"/>


            <RelativeLayout
                android:id="@+id/usuario_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">

                <ImageView
                    android:id="@+id/icono_usuario"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/icons_user"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icono_usuario">

                    <AutoCompleteTextView
                        android:id="@+id/usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:hint="@string/prompt_usuario"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                    android:id="@+id/pass_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/icono_pass"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/icono_pass"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icono_pass"
                    >

                    <EditText
                        android:id="@+id/contrasenia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_contrasenia"
                        android:text=""
                        android:inputType="textPassword"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>


                <Button
                    android:id="@+id/boton_iniciar_sesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:text="@string/action_ingresar"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/registrate_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/margen_boton"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/action_registrate"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="13dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/restablecer_contrasenia"/>

                <ProgressBar
                    android:id="@+id/login_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
